@@ -460,6 +460,13 @@ typedef struct _PTPDevicePropDesc PTPDevicePropDesc;
 #define PTP_DPC_UploadURL		0x501D
 #define PTP_DPC_Artist			0x501E
 #define PTP_DPC_CopyrightInfo		0x501F
+
+// Proprietary vendor extension device property mask
+#define PTP_DPC_EXTENSION_MASK		0xF000
+#define PTP_DPC_EXTENSION		0xD000
+
+// Vendor Extensions device property codes
+
 // Eastman Kodak extension device property codes
 #define PTP_DPC_EK_ColorTemperature	0xD001
 #define PTP_DPC_EK_DateTimeStampFormat	0xD002
@@ -467,6 +474,9 @@ typedef struct _PTPDevicePropDesc PTPDevicePropDesc;
 #define PTP_DPC_EK_VideoOut		0xD004
 #define PTP_DPC_EK_PowerSaving		0xD005
 #define PTP_DPC_EK_UI_Language		0xD006
+// Canon extension device property codes
+#define PTP_DPC_CANON_BeepMode		0xD001
+#define PTP_DPC_CANON_UnixTime		0xD034
 
 // Device Property Form Flag
 
